force-app/main/default/objects/Payment_to_Artist__c/Payment_to_Artist__c.object-meta.xml
<CustomObject>
    <description>An object used to store any payments made to the Artist</description>
    <label>Payment to Artist</label>
    <nameField>
        <label>Payment to Artist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payments to Artist</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>