force-app/main/default/objects/Payment_to_Artist__c/fields/Date_of_Payment__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Payment__c</fullName>
    <inlineHelpText>The date on which the payment was made</inlineHelpText>
    <label>Date of Payment</label>
    <type>Date</type>
</CustomField>